test/parse/module/bad-export-func-empty.txt
;;; ERROR: 1
(module (export))
(;; STDERR ;;;
out/test/parse/module/bad-export-func-empty.txt:2:16: error: syntax error, unexpected ), expecting TEXT
(module (export))
               ^
;;; STDERR ;;)
